// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LocationInput.styles > Divider renders a span and matches snapshot 1`] = `
.c0 {
  flex-shrink: 0;
  width: 1px;
  height: 22px;
  background: var(--pf-border);
}

<span
  class="c0"
/>
`;

exports[`LocationInput.styles > IconButton renders a button and matches snapshot 1`] = `
.c0 {
  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 28px;
  height: 28px;
  padding: 0;
  border: none;
  background: transparent;
  color: var(--pf-primary);
  cursor: pointer;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

<button
  class="c0"
/>
`;

exports[`LocationInput.styles > NearMeButton renders a button and matches snapshot 1`] = `
.c0 {
  flex-shrink: 0;
  display: flex;
  align-items: center;
  gap: 6px;
  border: none;
  background: transparent;
  border-radius: var(--pf-radius-pill);
  padding: 8px 10px;
  font-size: 0.875rem;
  font-weight: 500;
  font-family: var(--pf-font-body);
  color: var(--pf-link);
  white-space: nowrap;
  cursor: pointer;
  transition: background 0.15s;
}

.c0:hover:not(:disabled) {
  background: var(--pf-surface);
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
  class="c0"
/>
`;

exports[`LocationInput.styles > SearchForm renders a form and matches snapshot 1`] = `
.c0 {
  display: flex;
  align-items: center;
  gap: 8px;
  flex: 1;
  min-width: 0;
}

<form
  class="c0"
/>
`;

exports[`LocationInput.styles > SearchInput renders an input and matches snapshot 1`] = `
.c0 {
  flex: 1;
  min-width: 0;
  border: none;
  background: transparent;
  padding: 8px 0;
  font-size: 0.9375rem;
  font-family: var(--pf-font-body);
  color: var(--pf-text);
  outline: none;
}

.c0::placeholder {
  color: #9c8a6e;
}

.c0:disabled {
  color: var(--pf-text-muted);
}

<input
  class="c0"
/>
`;

exports[`LocationInput.styles > Wrapper renders a div and matches snapshot 1`] = `
.c0 {
  display: flex;
  align-items: center;
  gap: 4px;
  background: #ffffff;
  border: 1px solid var(--pf-border-soft);
  border-radius: var(--pf-radius-pill);
  padding: 4px 10px 4px 12px;
  box-shadow: var(--pf-shadow-card);
}

<div
  class="c0"
/>
`;
